* fix overflow

--- a/css/checkboxinput.css
+++ b/css/checkboxinput.css
@@ -15,6 +15,7 @@ label.as-checkbox-input {
     border-radius: 0.25em;
     padding: 0;
     margin: 0; /*fix boostrap override*/
+    overflow: hidden;
 }
 
 .as-checkbox-input:not(.as-read-only):not(.as-disabled){
